--- a/css/common.css
+++ b/css/common.css
@@ -35,6 +35,7 @@ overflow: hidden;}
 -webkit-line-clamp: 2;
 overflow: hidden;}
 
+
 .clr3{color:#333;}
 .clr6{color: #666;}
 .clr9{color: #999;}
@@ -46,6 +47,7 @@ overflow: hidden;}
 .bg6{background-color: #666;}
 .bg9{background-color: #999;}
 
+/*清除浮动*/
 .clear{zoom:1;}
 .clear:after{content: "";display: block;height: 0;clear: both;visibility: hidden;}
 
@@ -53,34 +55,19 @@ overflow: hidden;}
 .cur{color:#FE6927;font-size: 125%;}
 .active2{border: 1px solid #FE6927!important;color:#fe6927!important;}
 
-.flex_box{
+/*弹性盒子*/
+.flex{
 	display: flex;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 }
-.flex1{
-	flex:1;
-	-webkit-box-flex: 1;
-	box-flex:1;
-	-moz-box-flex: 1;
-	-webkit-flex: 1;
-	-ms-flex: 1;
+.center{
+	justify-content: center;
+	align-items: center;
 }
-.flex2{
-	flex:2;
-	-webkit-box-flex: 2;
-	box-flex:2;
-	-moz-box-flex: 2;
-	-webkit-flex: 2;
-	-ms-flex: 2;
-}
-.flex3{
-	flex:3;
-	-webkit-box-flex: 3;
-	box-flex:3;
-	-moz-box-flex: 3;
-	-webkit-flex: 3;
-	-ms-flex: 3;
-}
+
+.s-b{justify-content: space-between;}
+.s-a{justify-content: space-around;}
+
